--- a/src/componentes/carousel/carousel.css
+++ b/src/componentes/carousel/carousel.css
@@ -19,12 +19,14 @@
 
 
 .boton {
+  font-size: 28px;
   width: 50px;
   height: 350px;
   padding: 10px 20px;
   background-color: #ff914d;
   border: 2px solid #000;
   border-radius: 5px;
+  margin-right: 5px;
 }
 
 .boton:hover {
