--- a/src/componentes/details/detailsMovie.css
+++ b/src/componentes/details/detailsMovie.css
@@ -15,14 +15,8 @@
   }
   
   .contenido {
-  
- 
     display: flex;
-      
-     
     flex-direction: column;
-      
-     
     align-items: center;
       
     }
@@ -44,65 +38,43 @@
     }
 
   
-.button-container {
+    .button-container {
+      display: flex;
+      justify-content: center;
+      width: 250px;
+      margin-top: 10px;
+    
+    
+      }
+      
+    
+      .back-button {
+        width: 30%;
+        font-size: 20px;
+        background-color: #f1f1f1;
+    border: none;
+      margin-left: 15px;
+
+        }
+        
+
   
- 
-  display: flex;
-    
-   
-  justify-content: center;
-    gap: 10px;
-    
-   
-  margin-top: 20px;
-  }
-  
-  .button-container button {
-    
-   
-  padding: 10px 20px;
-    
-   
-  font-size: 16px;
-    
-   
+ .vote-button {
   border: none;
-    
-   
+  width: 70%;
+  color: white;
+  font-size: 20px;
+  background: orange;
+  padding: 15px 20px;
+  border-radius: 5px;
   cursor: pointer;
   }
   
-  .button-container button.vote-button {
-    
-   
-  background-color: #ff6600;
-    
-   
-  color: #fff;
-    
-   
-  font-weight: bold;
-  }
-  
-  .button-container button.vote-button:hover {
-    
-   
+.vote-button:hover {
   background-color: #e65c00;
   }
   
-  .button-container button.back-button {
-    
-   
-  background-color: #f1f1f1;
-    color: #333;
-  }
-  
-  .button-container button.back-button:hover {
-    
-   
-  background-color: #d9d9d9;
-  }
-      
+
       
       
       
